tests/snapshots/cargo_verset__test__cargo_verset-package.snap
---
source: src/test.rs
expression: help_text
---
Set the version of the package in a Cargo.toml file

Usage: package [OPTIONS] <VERSION>

Arguments:
  <VERSION>
          Version to set in the workspace

Options:
  -p, --path <PATH>
          Path to the directory containing the Cargo.toml file

  -d, --dry-run
          Run the program without making any changes

  -h, --help
          Print help
